--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,27 +3,73 @@ image: golang:1.17
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
+  - docker-build
   - deploy
+
+variables:
+  DOCKER_REGISTRY: harbor.sums.top
+  DOCKERHUB_NAMESPACE: ecos
+  BRANCH_NAME: $CI_COMMIT_REF_NAME
+  BUILD_NUMBER: $CI_COMMIT_SHA
+
+before_script:
+  - export GOPATH=$GOPATH:/usr/local/${CI_PROJECT_NAME}
+  - export VERSION=`echo ${CI_COMMIT_TAG} | awk -F"_" '{print $1}'`
+  - export GO111MODULE=on
+  - export GOPROXY=https://goproxy.cn,direct
+
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
+    - go mod vendor
+    - go mod download
+    - go build -o build/bin/ecos
+    - go build -o build/bin/edge-node ecos/edge-node
     - echo "Compile complete."
+  artifacts:
+    paths:
+      - build/
+    when: always
+    expire_in: 4 weeks
+  cache:
+    key: ecos_go_env
+    paths:
+      - vendor
+      - /go
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
+    - sleep 1
     - echo "Code coverage is 90%"
 
 lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
   script:
     - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
+    - sleep 1
     - echo "No lint issues found."
+
+ecos-docker-build:
+  stage: docker-build
+  image: docker:19.03.0
+  services:
+    - docker:19.03.0-dind
+  variables:
+    DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
+    # DOCKER_HOST: tcp://docker:2375
+  before_script:
+    - docker info
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_TOKEN $DOCKER_REGISTRY
+  script:
+    - echo "build ecos docker image"
+    - export APP_NAME=ecos
+    - docker build -f Dockerfile -t $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER .
+    - docker push  $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER
 
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
