--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: harbor.sums.top/ecos/rocksdb:6.14
+image: harbor.sums.top/ecos/rocksdb-go:v0.1
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
@@ -29,9 +29,9 @@ build-job:       # This job runs in the build stage, which runs first.
     - export CGO_LDFLAGS="-L/usr/local/lib -lrocksdb -lstdc++ -lm -lz -lbz2 -lsnappy -llz4 -lzstd"
     - go mod vendor
     - go mod download
-    - go build -o build/bin/ecos
-    - go build -o build/bin/cloud ecos/cloud
-    - go build -o build/bin/ecos-edge-node ecos/edge-node
+    - go build -a -ldflags '-extldflags "-static"' -o build/bin/ecos
+    - go build -a -ldflags '-extldflags "-static"' -o build/bin/cloud ecos/cloud
+    - go build -a -ldflags '-extldflags "-static"' -o build/bin/ecos-edge-node ecos/edge-node
     - echo "Compile complete."
   artifacts:
     paths:
