--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ build-job:       # This job runs in the build stage, which runs first.
     - go mod vendor
     - go mod download
     - go build -a -ldflags '-extldflags "-static"' -o build/bin/ecos
-    - go build -a -ldflags '-extldflags "-static"' -o build/bin/cloud ecos/cloud
+    - go build -a -ldflags '-extldflags "-static"' -o build/bin/ecos-cloud ecos/cloud
     - go build -a -ldflags '-extldflags "-static"' -o build/bin/ecos-edge-node ecos/edge-node
     - echo "Compile complete."
   artifacts:
@@ -46,6 +46,7 @@ build-job:       # This job runs in the build stage, which runs first.
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
+  needs: []
   script:
     - echo "Running unit tests... This will take about 60 seconds."
     - go mod vendor
@@ -59,6 +60,7 @@ unit-test-job:   # This job runs in the test stage.
 
 sonarqube-check:
   stage: test
+  needs: []
   image: 
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
@@ -70,7 +72,7 @@ sonarqube-check:
     paths:
       - .sonar/cache
   script: 
-    - sonar-scanner
+    - sonar-scanner -Dsonar.branch.name=$CI_COMMIT_REF_NAME
   allow_failure: true
   
 
@@ -88,12 +90,9 @@ ecos-docker-build:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_TOKEN $DOCKER_REGISTRY
     - export BUILD_NUMBER=${COMMIT_SHA:0:5}
   script:
-    - ls -alh
-    - pwd
     - mv ./build ./Dockerfile
     - mv ./conf ./Dockerfile
     - cd Dockerfile
-    - ls -alh
     - ls ./build/bin
     - echo "build ecos-cloud docker image"
     - export APP_NAME=ecos-cloud
