--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
-image: golang:1.17
-
+image: harbor.sums.top/ecos/rocksdb-go:v0.1
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
@@ -14,6 +13,9 @@ variables:
 
 before_script:
   - export GOPATH=$GOPATH:/usr/local/${CI_PROJECT_NAME}
+  - export CPLUS_INCLUDE_PATH=${CPLUS_INCLUDE_PATH}:/usr/local/lib/rocksdb
+  - export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/usr/local/lib
+  - export LIBRARY_PATH=${LIBRARY_PATH}:/usr/local/lib
   - export VERSION=`echo ${CI_COMMIT_TAG} | awk -F"_" '{print $1}'`
   - export GO111MODULE=on
   - export GOPROXY=https://goproxy.cn,direct
@@ -23,11 +25,13 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
+    - export CGO_CFLAGS="-I/usr/local/lib"
+    - export CGO_LDFLAGS="-L/usr/local/lib -lrocksdb -lstdc++ -lm -lz -lbz2 -lsnappy -llz4 -lzstd"
     - go mod vendor
     - go mod download
-    - go build -o build/bin/ecos
-    - go build -o build/bin/cloud ecos/cloud
-    - go build -o build/bin/ecos-edge-node ecos/edge-node
+    - go build -a -ldflags '-extldflags "-static"' -o build/bin/ecos
+    - go build -a -ldflags '-extldflags "-static"' -o build/bin/ecos-cloud ecos/cloud
+    - go build -a -ldflags '-extldflags "-static"' -o build/bin/ecos-edge-node ecos/edge-node
     - echo "Compile complete."
   artifacts:
     paths:
@@ -42,6 +46,7 @@ build-job:       # This job runs in the build stage, which runs first.
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
+  needs: []
   script:
     - echo "Running unit tests... This will take about 60 seconds."
     - go mod vendor
@@ -55,6 +60,7 @@ unit-test-job:   # This job runs in the test stage.
 
 sonarqube-check:
   stage: test
+  needs: []
   image: 
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
@@ -66,7 +72,7 @@ sonarqube-check:
     paths:
       - .sonar/cache
   script: 
-    - sonar-scanner
+    - sonar-scanner -Dsonar.branch.name=$CI_COMMIT_REF_NAME
   allow_failure: true
   
 
@@ -84,15 +90,19 @@ ecos-docker-build:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_TOKEN $DOCKER_REGISTRY
     - export BUILD_NUMBER=${COMMIT_SHA:0:5}
   script:
+    - mv ./build ./Dockerfile
+    - mv ./conf ./Dockerfile
+    - cd Dockerfile
+    - ls ./build/bin
     - echo "build ecos-cloud docker image"
     - export APP_NAME=ecos-cloud
-    - docker build -f Dockerfile/ecos-cloud -t $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER .
+    - docker build -f ecos-cloud-ci -t $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER .
     - docker push  $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER
     - docker tag $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-latest
     - docker push $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-latest
     - echo "build ecos-edge-node docker image"
     - export APP_NAME=ecos-edge-node
-    - docker build -f Dockerfile/ecos-edge-node -t $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER .
+    - docker build -f ecos-edge-node-ci -t $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER .
     - docker push  $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER
     - docker tag $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-latest
     - docker push $DOCKER_REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-latest
