go test generate cover profile

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,10 @@
 sonar.projectKey=ecc_ecos_AX8bj5InqSbHcehCpe7G
 sonar.qualitygate.wait=true
+
+sonar.sources=.
+sonar.exclusions=**/*_test.go
+
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+
+sonar.go.coverage.reportPaths=cover.out
