--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,13 +45,18 @@ build-job:       # This job runs in the build stage, which runs first.
       - /go
 
 unit-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
+  stage: test
   needs: []
   script:
     - echo "Running unit tests... This will take about 60 seconds."
     - go mod vendor
     - go mod download
-    - go test ./... -v
+    - go test ./... -coverprofile=cover.out
+  artifacts:
+    paths:
+      - cover.out
+    when: always
+    expire_in: 1 weeks
   cache:
     key: ecos_go_env
     paths:
@@ -60,7 +65,7 @@ unit-test-job:   # This job runs in the test stage.
 
 sonarqube-check:
   stage: test
-  needs: []
+  needs: [unit-test-job]
   image: 
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
