sonar exclude *.pb.go

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=ecc_ecos_AX8bj5InqSbHcehCpe7G
 sonar.qualitygate.wait=true
 
 sonar.sources=.
-sonar.exclusions=**/*_test.go
+sonar.exclusions=**/*_test.go,**/*.pb.go
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
