--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,6 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 
 sonar.go.coverage.reportPaths=cover.out
+
+#golangci-lint
+sonar.go.golangci-lint.reportPaths=report.xml
