--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,7 @@ unit-test-job:   # This job runs in the test stage.
   artifacts:
     paths:
       - cover.out
+      - report.xml
     when: always
     expire_in: 1 weeks
   cache:
