--- a/messenger/Makefile
+++ b/messenger/Makefile
@@ -1,7 +1,4 @@
-GO_OPT_FLAG=--go_opt=paths=source_relative
-GRPC_OPT_FLAG=--go-grpc_opt=paths=source_relative
-PROC_INC=-Iproto
-TIDE_DIR=./tide
+GOMODCACHE=$(go env GOMODCACHE)
 
 .PHONY:	clean object tide
 
@@ -9,9 +6,6 @@ clean:
 	rm *.pb.go
 
 
-object.pb.go: proto/object.proto
-	protoc --go_out=. ${GO_OPT_FLAG} ${PROC_INC} proto/object.proto
-
-tide:	proto/tide.proto object.pb.go
-	protoc --go_out=${TIDE_DIR} --go-grpc_out=${TIDE_DIR} ${GO_OPT_FLAG} ${GRPC_OPT_FLAG} ${PROC_INC} \
-		proto/tide.proto
+all:
+	protoc --go_out=.. --go-grpc_out=..  messenger/proto/*.proto -I messenger/proto -I ${GOMODCACHE}\go.etcd.io\etcd\raft\v3@v3.5.2 -I ${GOMODCACHE}\github.com\gogo\protobuf@v1.3.2
+    --go_opt=Mraftpb/raft.proto=go.etcd.io/etcd/raft/v3/raftpb
