--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,13 @@
 sonar.projectKey=ecc_ecos_AX8bj5InqSbHcehCpe7G
 sonar.qualitygate.wait=true
+
+sonar.sources=.
+sonar.exclusions=**/*_test.go,**/*.pb.go
+
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
+
+sonar.go.coverage.reportPaths=cover.out
+
+#golangci-lint
+sonar.go.golangci-lint.reportPaths=report.xml
