#21: Add GetGroupInfo RPC to moon

--- a/messenger/Makefile
+++ b/messenger/Makefile
@@ -1,11 +1,10 @@
 GOMODCACHE=$(go env GOMODCACHE)
 
-.PHONY:	clean object tide
+.PHONY:	clean all
 
 clean:
 	rm *.pb.go
 
 
 all:
-	protoc --go_out=.. --go-grpc_out=..  messenger/proto/*.proto -I messenger/proto -I ${GOMODCACHE}\go.etcd.io\etcd\raft\v3@v3.5.2 -I ${GOMODCACHE}\github.com\gogo\protobuf@v1.3.2
-    --go_opt=Mraftpb/raft.proto=go.etcd.io/etcd/raft/v3/raftpb
+	protoc --go_out=.. --go-grpc_out=..  messenger/proto/*.proto -I messenger/proto -I ${GOMODCACHE}\go.etcd.io\etcd\raft\v3@v3.5.2 -I ${GOMODCACHE}\github.com\gogo\protobuf@v1.3.2 --go_opt=Mraftpb/raft.proto=go.etcd.io/etcd/raft/v3/raftpb
