chore(edge-node): modify sample edge node config

--- a/conf/edge_node.json.sample
+++ b/conf/edge_node.json.sample
@@ -1,13 +1,18 @@
 {
   "SelfInfo": {
     "raft_id": 1,
-    "rpc_port": 3267
+    "rpc_port": 3267,
+    "capacity": 10
   },
   "RpcPort": 3267,
   "HttpPort": 3268,
-  "Moon": {
+  "StoragePath": "/data/ecos",
+  "MoonConfig": {
     "SunAddr": "ecos-cloud-dev.ecos.svc.cluster.local:3267",
-    "GroupInfo": {}
+    "GroupInfo": {},
+    "NodeInfoCommitInterval": 10000000000
   },
-  "StoragePath": "/data/ecos"
+  "GaiaConfig": {
+    "BasePath": "/data/ecos/gaia/"
+  }
 }
