--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,8 @@ sonarqube-check:
 
 ecos-docker-build:
   stage: docker-build
+  when: manual
+  needs: []
   image: docker:19.03.0
   services:
     - docker:19.03.0-dind
@@ -118,6 +120,7 @@ ecos-docker-build:
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   when: manual
+  needs: []
   image:
     name: bitnami/kubectl:1.22.6-debian-10-r7
     entrypoint: [""]
