--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,10 +51,10 @@ unit-test-job:   # This job runs in the test stage.
   script:
     - go env -w GOMODCACHE=$(pwd)/.mod_cache/ GOPROXY=https://goproxy.cn,direct GOCACHE=$(pwd)/.go_cache/
     - echo "Running unit tests... This will take about 60 seconds."
-    - go mod tidy
-    - go test ./... -coverprofile=cover.out -parallel 1 -p 1
     - golangci-lint --version
-    - golangci-lint run --out-format checkstyle ./... > report.xml || true
+    - golangci-lint run --out-format checkstyle ./... > report.xml & # run in background
+    - go mod tidy
+    - go test ./... -coverprofile=cover.out -race  # enable race test default
     - ls
   artifacts:
     paths:
