chore(client): update imagePullPolicy

--- a/deploy/dev-ol/ecos-client.yaml
+++ b/deploy/dev-ol/ecos-client.yaml
@@ -47,7 +47,7 @@ spec:
               mountPath: /data
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
       dnsPolicy: ClusterFirst
