--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,12 +91,12 @@ ecos-docker-build:
   stage: docker-build
   needs: [build-job, unit-test-job]
   image: docker:19.03.0
-  services:
-    - docker:19.03.0-dind
+#  services:
+#    - docker:19.03.0-dind
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
-    # DOCKER_HOST: tcp://docker:2375
+    DOCKER_HOST: tcp://localhost:2375
   before_script:
     - docker info
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_TOKEN $DOCKER_REGISTRY
