refactor: rename GroupInfo to ClusterInfo

--- a/conf/edge_node.json.sample
+++ b/conf/edge_node.json.sample
@@ -9,7 +9,7 @@
   "StoragePath": "/data/ecos",
   "MoonConfig": {
     "SunAddr": "ecos-cloud-dev:3267",
-    "GroupInfo": {},
+    "ClusterInfo": {},
     "NodeInfoCommitInterval": 20000000000
   },
   "GaiaConfig": {
