chore(edge-node): fix edge node run in k8s

--- a/deploy/dev-ol/ecos-edge.yaml
+++ b/deploy/dev-ol/ecos-edge.yaml
@@ -25,6 +25,11 @@ spec:
         - name: ecos-edge-node
           imagePullPolicy: Always
           image: 'harbor.sums.top/ecos/ecos-edge-node:SNAPSHOT-latest'
+          command:
+            - /ecos/ecos-edge-node
+          args:
+            - node
+            - run
           resources:
             limits:
               cpu: '2'
