bug(client): trigger CI for replay

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,7 @@ unit-test-job:   # This job runs in the test stage.
     - golangci-lint --version
     - golangci-lint run --out-format checkstyle ./... > report.xml & # run in background
     - go mod tidy
-    - go test ./client/...  -coverprofile=cover.out -race  # enable race test default
+    - go test ./client/...  -coverprofile=cover.out  # enable race test default
     - ls
   artifacts:
     paths:
