--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,11 +128,13 @@ ecos-docker-build:
 deploy-job:      # This job runs in the deploy stage.
   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
   rules:
-    - if: $BRANCH_NAME == "main"
+    - if: $CI_COMMIT_BRANCH == "main"
       when: on_success
-    - if: $BRANCH_NAME != "main" && $CI_PIPELINE_SOURCE != 'merge_request_event'
+      allow_failure: true
+    - if: $CI_COMMIT_BRANCH != "main" && $CI_PIPELINE_SOURCE != 'merge_request_event'
       when: manual
-  needs: []
+      allow_failure: true
+  needs: [ecos-docker-build]
   image:
     name: bitnami/kubectl:1.22.6-debian-10-r7
     entrypoint: [""]
