--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:          # List of stages for jobs, and their order of execution
   - test
   - docker-build
   - deploy
+  - benchmark
 
 variables:
   DOCKER_REGISTRY: harbor.sums.top
@@ -62,7 +63,7 @@ unit-test-job:   # This job runs in the test stage.
       - cover.out
       - report.xml
     when: always
-    expire_in: 1 weeks
+    expire_in: 8 weeks
   cache:
     key: ecos_go_env
     paths:
@@ -152,3 +153,30 @@ deploy-job:      # This job runs in the deploy stage.
     - kubectl delete -f ecos-edge.yaml || true
     - kubectl apply -f ecos-edge.yaml
     - echo "Application successfully deployed."
+
+benchmark-job:
+  stage: benchmark
+  needs: [unit-test-job]
+  only:
+    - main
+  script:
+    - echo "Running benchmark..."
+    - go test ./...  -bench=.  -benchmem -run=none  -benchtime=1s
+    - cd client
+    - "go test '-bench=BenchmarkClient/put_object' -benchmem -run=none \
+       -cpuprofile=cpu_put.pprof -memprofile=mem_put.pprof -benchtime=2s"
+    - "go test '-bench=BenchmarkClient/get_object' -benchmem -run=none \
+       -cpuprofile=cpu_get.pprof -memprofile=mem_get.pprof -benchtime=2s"
+  artifacts:
+    paths:
+      - client/cpu_put.pprof
+      - client/mem_put.pprof
+      - client/cpu_get.pprof
+      - client/mem_get.pprof
+    when: always
+    expire_in: 8 weeks
+  cache:
+    key: ecos_go_env
+    paths:
+      - .mod_cache/
+      - .go_cache/
