chore: expose 8080 port on k8s & save block data in local storage

--- a/conf/edge_node.json.sample
+++ b/conf/edge_node.json.sample
@@ -4,7 +4,7 @@
   "WatcherConfig": {
     "SunAddr": "ecos-cloud-dev:3267",
     "ClusterInfo": {},
-    "NodeInfoCommitInterval": 20000000000,
+    "NodeInfoCommitInterval": 10000000000,
     "PrometheusAddr": "http://gateway.prometheus.sums.top",
     "ClusterName": "ecos_k8s"
   },
@@ -14,6 +14,6 @@
     "RocksdbStoragePath": "/data/ecos/moon/rocksdb/"
   },
   "GaiaConfig": {
-    "BasePath": "/data/ecos/gaia/"
+    "BasePath": "./ecos-data/gaia",
   }
 }
