--- a/deploy/dev-ol/ecos-edge.yaml
+++ b/deploy/dev-ol/ecos-edge.yaml
@@ -97,4 +97,7 @@ spec:
       protocol: TCP
       port: 3267
       targetPort: 3267
+    - name: http-proxy
+      protocol: TCP
+      containerPort: 8080
   clusterIP: None
