chore: fix edge_node config

--- a/conf/edge_node.json.sample
+++ b/conf/edge_node.json.sample
@@ -14,6 +14,6 @@
     "RocksdbStoragePath": "/data/ecos/moon/rocksdb/"
   },
   "GaiaConfig": {
-    "BasePath": "./ecos-data/gaia",
+    "BasePath": "./ecos-data/gaia"
   }
 }
