feat(alaya): add Alaya Config

--- a/conf/edge_node.json.sample
+++ b/conf/edge_node.json.sample
@@ -15,5 +15,8 @@
   },
   "GaiaConfig": {
     "BasePath": "./ecos-data/gaia"
+  },
+  "AlayaConfig": {
+    "BasePath": "/data/ecos/alaya/"
   }
 }
