--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,50 +47,9 @@ build-job:       # This job runs in the build stage, which runs first.
       - .mod_cache/
       - .go_cache/
 
-unit-test-job:   # This job runs in the test stage.
-  stage: test
-  needs: []
-  script:
-    - go env -w GOMODCACHE=$(pwd)/.mod_cache/ GOPROXY=https://goproxy.cn,direct GOCACHE=$(pwd)/.go_cache/
-    - echo "Running unit tests..."
-    - golangci-lint --version
-    - golangci-lint run --out-format checkstyle ./... > report.xml & # run in background
-    - go mod tidy
-    - go test ./...  -coverprofile=cover.out -race  # enable race test default
-    - ls
-  artifacts:
-    paths:
-      - cover.out
-      - report.xml
-    when: always
-    expire_in: 8 weeks
-  cache:
-    key: ecos_go_env
-    paths:
-      - .mod_cache/
-      - .go_cache/
-
-sonarqube-check:
-  stage: test
-  needs: [unit-test-job]
-  image:
-    name: sonarsource/sonar-scanner-cli:latest
-    entrypoint: [""]
-  variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-  cache:
-    key: "${CI_JOB_NAME}"
-    paths:
-      - .sonar/cache
-  script:
-    - sonar-scanner -Dsonar.branch.name=$CI_COMMIT_REF_NAME
-  allow_failure: true
-
-
 ecos-docker-build:
   stage: docker-build
-  needs: [build-job, unit-test-job]
+  needs: [build-job]
   image: docker:19.03.0
 #  services:
 #    - docker:19.03.0-dind
@@ -153,38 +112,3 @@ deploy-job:      # This job runs in the deploy stage.
     - kubectl delete -f ecos-edge.yaml || true
     - kubectl apply -f ecos-edge.yaml
     - echo "Application successfully deployed."
-
-benchmark-job:
-  stage: benchmark
-  rules:
-    - if: $CI_COMMIT_BRANCH == "main"
-      when: on_success
-      allow_failure: true
-    - if: $CI_COMMIT_BRANCH != "main" && $CI_PIPELINE_SOURCE != 'merge_request_event'
-      when: manual
-      allow_failure: true
-  needs: [unit-test-job]
-  script:
-    - go env -w GOMODCACHE=$(pwd)/.mod_cache/ GOPROXY=https://goproxy.cn,direct GOCACHE=$(pwd)/.go_cache/
-    - go mod tidy
-    - echo "Running benchmark..."
-    - cd client
-    - "go test '-bench=BenchmarkClient/put_object' -benchmem -run=none \
-       -cpuprofile=cpu_put.pprof -memprofile=mem_put.pprof -benchtime=10s"
-    - "go test '-bench=BenchmarkClient/get_object' -benchmem -run=none \
-       -cpuprofile=cpu_get.pprof -memprofile=mem_get.pprof -benchtime=10s"
-    - cd ..
-    - go test ./...  -bench=.  -benchmem -run=none  -benchtime=1s
-  artifacts:
-    paths:
-      - client/cpu_put.pprof
-      - client/mem_put.pprof
-      - client/cpu_get.pprof
-      - client/mem_get.pprof
-    when: always
-    expire_in: 8 weeks
-  cache:
-    key: ecos_go_env
-    paths:
-      - .mod_cache/
-      - .go_cache/
