--- a/conf/edge_node.json.sample
+++ b/conf/edge_node.json.sample
@@ -8,7 +8,7 @@
     "PrometheusAddr": "http://gateway.prometheus.sums.top",
     "ClusterName": "ecos_k8s",
     "CloudAddr": "ecos-cloud-dev",
-    "CloudPort": 3267,
+    "CloudPort": 3267
   },
   "MoonConfig": {
     "ClusterInfo": {},
