--- a/deploy/dev-ol/ecos-client-exp.yaml
+++ b/deploy/dev-ol/ecos-client-exp.yaml
@@ -20,7 +20,7 @@ spec:
       labels:
         app: ecos-client-exp
       annotations:
-        cni.projectcalico.org/ipv4pools: '["default-ipv4-ippool"]'
+        cni.projectcalico.org/ipAddrs: "[\"10.244.3.103\"]"
         logging.kubesphere.io/logsidecar-config: '{}'
     spec:
       volumes:
