--- a/deploy/dev-ol/ecos-edge.yaml
+++ b/deploy/dev-ol/ecos-edge.yaml
@@ -74,6 +74,7 @@ spec:
           requests:
             storage: 300Gi
         storageClassName: rook-ceph-block
+        persistentVolumeReclaimPolicy: Delete
       metadata:
         name: ecos-edge-storage
         namespace: ecos
