chore: use new rolling update startegy

--- a/deploy/dev-ol/ecos-edge.yaml
+++ b/deploy/dev-ol/ecos-edge.yaml
@@ -65,6 +65,7 @@ spec:
     type: RollingUpdate
     rollingUpdate:
       partition: 0
+  podManagementPolicy: Parallel
   serviceName: ecos-edge-dev
   volumeClaimTemplates:
     - spec:
