--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ unit-test-job:   # This job runs in the test stage.
     - golangci-lint --version
     - golangci-lint run --out-format checkstyle ./... > report.xml & # run in background
     - go mod tidy
-    - go test ./...  -coverprofile=cover.out -race -timeout=4m  # enable race test default
+    - go test ./...  -coverprofile=cover.out -race -timeout=4m -short  # enable race test default
     - ls
   artifacts:
     paths:
